Changes for adding book management system and regisroeing it on eureka

--- a/learn-bms-ms/src/main/resources/application.properties
+++ b/learn-bms-ms/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port=0
-spring.application.name=ums-ms
+spring.application.name=bms-ms
 spring.devtools.restart.enabled=true
 eureka.client.service-url.defaultZone=http://localhost:8010/eureka
