--- a/learn-bms-ms/pom.xml
+++ b/learn-bms-ms/pom.xml
@@ -6,13 +6,13 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.1.7.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.learn.ums.ms</groupId>
-	<artifactId>learn-ums-ms</artifactId>
+	<groupId>com.learn.bms.ms</groupId>
+	<artifactId>learn-bms-ms</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>learn-ums-ms</name>
-	<description>User management system</description>
+	<name>learn-bms-ms</name>
+	<description>Books management system</description>
 
 	<properties>
 		<java.version>1.8</java.version>
