--- a/book-api-gateway/src/main/resources/application.properties
+++ b/book-api-gateway/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+server.port=8011
+spring.application.name=zull-api-gateway
+spring.devtools.restart.enabled=true
+eureka.client.service-url.defaultZone=http://localhost:8010/eureka
