--- a/learn-bms-ms/src/main/resources/application.properties
+++ b/learn-bms-ms/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=0
 spring.application.name=bms-ms
 spring.devtools.restart.enabled=true
-eureka.client.service-url.defaultZone=http://localhost:8010/eureka
+eureka.client.service-url.defaultZone=http://localhost:8080/eureka
+eureka.instance.instance-id=${spring.application.name}:${random.value}
