--- a/learn-bms-ms/pom.xml
+++ b/learn-bms-ms/pom.xml
@@ -33,6 +33,11 @@
 			<artifactId>orika-core</artifactId>
 			<version>1.4.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongo-java-driver</artifactId>
+			<version>3.10.2</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
