--- a/learn-ums-ms/src/main/resources/application.properties
+++ b/learn-ums-ms/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.devtools.restart.enabled=true
 eureka.client.service-url.defaultZone=http://localhost:8080/eureka
 eureka.instance.instance-id=${spring.application.name}:${random.value}
 
+gateway.ip = 127.0.0.1
+
