--- a/learn-ums-ms/src/main/resources/application.properties
+++ b/learn-ums-ms/src/main/resources/application.properties
@@ -6,4 +6,4 @@ eureka.client.service-url.defaultZone=http://localhost:8080/eureka
 eureka.instance.instance-id=${spring.application.name}:${random.value}
 
 gateway.ip = 127.0.0.1
-
+jwt.token.secret=jadkhfieij13nlkj45jj245iopociu65n
