Securing Juul API gateway

--- a/book-api-gateway/src/main/resources/application.properties
+++ b/book-api-gateway/src/main/resources/application.properties
@@ -2,3 +2,9 @@ server.port=8050
 spring.application.name=zull-api-gateway
 spring.devtools.restart.enabled=true
 eureka.client.service-url.defaultZone=http://localhost:8080/eureka
+
+path.user.login=/ums-ms/user/login
+path.user.signup=/ums-ms/user/sign-up
+
+jwt.auth.token.name=token
+jwt.token.secret=jadkhfieij13nlkj45jj245iopociu65n
